--- a/index.html
+++ b/index.html
@@ -6,57 +6,57 @@
 	<body>
 		<h1>What are the oldest things in the world?</h1>
 		<ul id="full-list">
-			<li><a href="https://en.wikipedia.org/wiki/List_of_airlines_by_foundation_date">Airlines</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_archaeological_sites_by_continent_and_age">Archaeological sites</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_banks_in_continuous_operation">Banks (continuous operation)</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_artifacts_significant_to_the_Bible">Biblical artifacts</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_the_oldest_buildings_in_the_world">Buildings</a>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_airlines_by_foundation_date" target="_blank">Airlines</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_archaeological_sites_by_continent_and_age" target="_blank">Archaeological sites</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_banks_in_continuous_operation" target="_blank">Banks (continuous operation)</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_artifacts_significant_to_the_Bible" target="_blank">Biblical artifacts</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_the_oldest_buildings_in_the_world" target="_blank">Buildings</a>
 				<ul id="buildings">
-					<li><a href="https://en.wikipedia.org/wiki/Oldest_churches_in_the_world">Churches</a></li>
-					<li><a href="https://en.wikipedia.org/wiki/List_of_libraries_in_the_ancient_world">Libraries</a></li>
-					<li><a href="https://en.wikipedia.org/wiki/Oldest_mosques_in_the_world">Mosques</a></li>
-					<li><a href="https://en.wikipedia.org/wiki/Oldest_synagogues_in_the_world">Synagogues</a></li>
+					<li><a href="https://en.wikipedia.org/wiki/Oldest_churches_in_the_world" target="_blank">Churches</a></li>
+					<li><a href="https://en.wikipedia.org/wiki/List_of_libraries_in_the_ancient_world" target="_blank">Libraries</a></li>
+					<li><a href="https://en.wikipedia.org/wiki/Oldest_mosques_in_the_world" target="_blank">Mosques</a></li>
+					<li><a href="https://en.wikipedia.org/wiki/Oldest_synagogues_in_the_world" target="_blank">Synagogues</a></li>
 				</ul>
 			</li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_cities_by_time_of_continuous_habitation">Cities (continuously inhabited)</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_companies">Companies</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_national_constitutions">Constitutions (sort by date)</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_sovereign_states_by_date_of_formation#Sortable_list">Countries</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_Egyptian_papyri_by_date">Egyptian papyri</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_football_clubs_in_England_and_Wales_by_year_formed">Football clubs</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_countries_and_islands_by_first_human_settlement">Human settlements (by country)</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_the_oldest_currently_registered_Internet_domain_names">Internet domains</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_languages_by_first_written_accounts">Languages</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_cities_by_time_of_continuous_habitation" target="_blank">Cities (continuously inhabited)</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_companies" target="_blank">Companies</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_national_constitutions" target="_blank">Constitutions (sort by date)</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_sovereign_states_by_date_of_formation#Sortable_list" target="_blank">Countries</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_Egyptian_papyri_by_date" target="_blank">Egyptian papyri</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_football_clubs_in_England_and_Wales_by_year_formed" target="_blank">Football clubs</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_countries_and_islands_by_first_human_settlement" target="_blank">Human settlements (by country)</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_the_oldest_currently_registered_Internet_domain_names" target="_blank">Internet domains</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_languages_by_first_written_accounts" target="_blank">Languages</a></li>
 			<li>Living Things
 				<ul id="life">
-					<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_dogs">Dogs</a></li>
-					<li><a href="https://en.wikipedia.org/wiki/List_of_long-living_organisms">Organisms</a></li>
-					<li><a href="https://en.wikipedia.org/wiki/Oldest_people">People</a>
+					<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_dogs" target="_blank">Dogs</a></li>
+					<li><a href="https://en.wikipedia.org/wiki/List_of_long-living_organisms" target="_blank">Organisms</a></li>
+					<li><a href="https://en.wikipedia.org/wiki/Oldest_people" target="_blank">People</a>
 						<ul id="people">
-							<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_Catholic_bishops">Catholic bishops</a></li>
-							<li><a href="https://en.wikipedia.org/wiki/List_of_human_evolution_fossils">Hominid fossils</a>
-							<li><a href="https://en.wikipedia.org/wiki/List_of_people_with_the_longest_marriages">Marriages</a></li>
-							<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_professional_athletes_by_sport">Professional athletes</a></li>
-							<li><a href="https://en.wikipedia.org/wiki/List_of_the_oldest_living_state_leaders">State leaders</a></li>
-							<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_twins">Twins</a></li>
-							<li><a href="https://en.wikipedia.org/wiki/Last_surviving_United_States_war_veterans">United States war veterans</a></li>
-							<li><a href="https://en.wikipedia.org/wiki/List_of_last_surviving_World_War_I_veterans_by_country">World War I veterans (by country)</a></li>
+							<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_Catholic_bishops" target="_blank">Catholic bishops</a></li>
+							<li><a href="https://en.wikipedia.org/wiki/List_of_human_evolution_fossils" target="_blank">Hominid fossils</a>
+							<li><a href="https://en.wikipedia.org/wiki/List_of_people_with_the_longest_marriages" target="_blank">Marriages</a></li>
+							<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_professional_athletes_by_sport" target="_blank">Professional athletes</a></li>
+							<li><a href="https://en.wikipedia.org/wiki/List_of_the_oldest_living_state_leaders" target="_blank">State leaders</a></li>
+							<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_twins" target="_blank">Twins</a></li>
+							<li><a href="https://en.wikipedia.org/wiki/Last_surviving_United_States_war_veterans" target="_blank">United States war veterans</a></li>
+							<li><a href="https://en.wikipedia.org/wiki/List_of_last_surviving_World_War_I_veterans_by_country" target="_blank">World War I veterans (by country)</a></li>
 						</ul>
 					</li>
-					<li><a href="https://en.wikipedia.org/wiki/List_of_transitional_fossils">Transitional fossils</a></li>
+					<li><a href="https://en.wikipedia.org/wiki/List_of_transitional_fossils" target="_blank">Transitional fossils</a></li>
 				</ul>
 			</li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_metro_systems">Metro systems (sort by opening)</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_New_Testament_papyri">New Testament papyri</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_the_oldest_newspapers">Newspapers</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_orogenies">Orogenies</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_radio_stations">Radio stations</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_rivers_by_age">Rivers</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_superhero_debuts">Superheros</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Oldest_television_station">Television stations</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_universities_in_continuous_operation">Universities (continuous operation)</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_video_game_consoles">Video game consoles</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Wikipedia:Wikipedia's_oldest_articles">Wikipedia articles</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_metro_systems" target="_blank">Metro systems (sort by opening)</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_New_Testament_papyri" target="_blank">New Testament papyri</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_the_oldest_newspapers" target="_blank">Newspapers</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_orogenies" target="_blank">Orogenies</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_radio_stations" target="_blank">Radio stations</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_rivers_by_age" target="_blank">Rivers</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_superhero_debuts" target="_blank">Superheros</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/Oldest_television_station" target="_blank">Television stations</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_universities_in_continuous_operation" target="_blank">Universities (continuous operation)</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/List_of_video_game_consoles" target="_blank">Video game consoles</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/Wikipedia:Wikipedia's_oldest_articles" target="_blank">Wikipedia articles</a></li>
 		</ul>
 	</body>
 </html>
