--- a/index.html
+++ b/index.html
@@ -58,5 +58,16 @@
 			<li><a href="https://en.wikipedia.org/wiki/List_of_video_game_consoles" target="_blank">Video game consoles</a></li>
 			<li><a href="https://en.wikipedia.org/wiki/Wikipedia:Wikipedia's_oldest_articles" target="_blank">Wikipedia articles</a></li>
 		</ul>
+
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-42318341-1', 'wlfsn.com');
+		  ga('send', 'pageview');
+
+		</script>
 	</body>
 </html>
