add military vehicles and improve categorization

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<body>
 		<h1>What are the oldest things in the world?</h1>
 		<ul id="full-list">
-			<li><a href="https://en.wikipedia.org/wiki/List_of_airlines_by_foundation_date" target="_blank">Airlines</a></li>
 			<li><a href="https://en.wikipedia.org/wiki/List_of_archaeological_sites_by_continent_and_age" target="_blank">Archaeological sites</a></li>
 			<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_banks_in_continuous_operation" target="_blank">Banks (continuous operation)</a></li>
 			<li><a href="https://en.wikipedia.org/wiki/List_of_artifacts_significant_to_the_Bible" target="_blank">Biblical artifacts</a></li>
@@ -46,7 +45,14 @@
 					<li><a href="https://en.wikipedia.org/wiki/List_of_transitional_fossils" target="_blank">Transitional fossils</a></li>
 				</ul>
 			</li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_metro_systems" target="_blank">Metro systems (sort by opening)</a></li>
+			<li>Machines
+				<ul id=<"machines">
+					<li><a href="https://en.wikipedia.org/wiki/List_of_airlines_by_foundation_date" target="_blank">Airlines</a></li>
+					<li><a href="https://en.wikipedia.org/wiki/List_of_metro_systems" target="_blank">Metro systems (sort by opening)</a></li>
+					<li><a href="http://jalopnik.com/the-ten-oldest-military-vehicles-still-in-service-730743683">Military vehicles (still in service)</a></li>
+					<li><a href="https://en.wikipedia.org/wiki/List_of_video_game_consoles" target="_blank">Video game consoles</a></li>
+				</ul>
+			</li>
 			<li><a href="https://en.wikipedia.org/wiki/List_of_New_Testament_papyri" target="_blank">New Testament papyri</a></li>
 			<li><a href="https://en.wikipedia.org/wiki/List_of_the_oldest_newspapers" target="_blank">Newspapers</a></li>
 			<li><a href="https://en.wikipedia.org/wiki/List_of_orogenies" target="_blank">Orogenies</a></li>
@@ -55,7 +61,6 @@
 			<li><a href="https://en.wikipedia.org/wiki/List_of_superhero_debuts" target="_blank">Superheros</a></li>
 			<li><a href="https://en.wikipedia.org/wiki/Oldest_television_station" target="_blank">Television stations</a></li>
 			<li><a href="https://en.wikipedia.org/wiki/List_of_oldest_universities_in_continuous_operation" target="_blank">Universities (continuous operation)</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/List_of_video_game_consoles" target="_blank">Video game consoles</a></li>
 			<li><a href="https://en.wikipedia.org/wiki/Wikipedia:Wikipedia's_oldest_articles" target="_blank">Wikipedia articles</a></li>
 		</ul>
 
