add missing target=blank

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<ul id=<"machines">
 					<li><a href="https://en.wikipedia.org/wiki/List_of_airlines_by_foundation_date" target="_blank">Airlines</a></li>
 					<li><a href="https://en.wikipedia.org/wiki/List_of_metro_systems" target="_blank">Metro systems (sort by opening)</a></li>
-					<li><a href="http://jalopnik.com/the-ten-oldest-military-vehicles-still-in-service-730743683">Military vehicles (still in service)</a></li>
+					<li><a href="http://jalopnik.com/the-ten-oldest-military-vehicles-still-in-service-730743683" target="_blank">Military vehicles (still in service)</a></li>
 					<li><a href="https://en.wikipedia.org/wiki/List_of_video_game_consoles" target="_blank">Video game consoles</a></li>
 				</ul>
 			</li>
