add HTML comments

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+	<!-- HEAD -->
 	<head>
 		<title>The Oldest Things in the World</title>
 	</head>
+	<!-- /HEAD -->
+	<!-- BODY -->
 	<body>
 		<h1>What are the oldest things in the world?</h1>
 		<ul id="full-list">
@@ -75,4 +78,5 @@
 
 		</script>
 	</body>
+	<!-- /BODY -->
 </html>
